@@ -13,6 +13,8 @@ Revision history for Perl extension Params::CallbackRequest.
       - Fixed a bug detecting mod_perl2. Reported by Jimmy Li.
       - Fixed a bug in the redirect() method under mod_perl2. Report and fix
         from Jimmy Li.
+      - Added the "configure_requires" parameter to Build.PL and added
+        Test::Pod to the "recommends" parameter.
 
 1.15  2006-05-26T21:28:55
       - Added the 'requester' attribute to Params::Callback. This can be
